[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://Scripts/UI/GhostUI.gd" id="1_script"]

[node name="GhostUI" type="CanvasLayer"]
script = ExtResource("1_script")

[node name="QueueContainer" type="PanelContainer" parent="."]
offset_left = 20.0
offset_top = 20.0
offset_right = 250.0
offset_bottom = 200.0

[node name="VBoxContainer" type="VBoxContainer" parent="QueueContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="QueueContainer/VBoxContainer"]
layout_mode = 2
text = "Upcoming Talks:"

[node name="CountdownLabel" type="Label" parent="QueueContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.5, 0.8, 1.0, 1.0)
text = "Influence Ready In: 5"

[node name="QueueListLabel" type="RichTextLabel" parent="QueueContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "1. Det <-> Susp A
2. Susp B <-> Susp C"

[node name="Panel" type="Panel" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -150.0
offset_right = 250.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 15

[node name="HeaderLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "ðŸ‘» Spirit Influence ðŸ‘»"
horizontal_alignment = 1

[node name="StatusLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Select a vessel to influence..."
horizontal_alignment = 1

[node name="SuspectContainer" type="HBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="MessageInput" type="LineEdit" parent="Panel/VBoxContainer"]
layout_mode = 2
placeholder_text = "Type the words they should say..."
alignment = 1

[node name="SubmitButton" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Possess & Speak"

[connection signal="pressed" from="Panel/VBoxContainer/SubmitButton" to="." method="_on_submit_pressed"]
